# Locally-driven-LLM

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  config.example.json  config.json.bak  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml  run_pipeline.py
.github/workflows/: ci.yml
docker/: dockerfile
docs/: CONFIG.md  CONTEXT_CONTRACT.md  DEPENDENCIES.md  PIPELINE.md  PROJECT_PLAN.md  RUNTIME_LIFECYCLE.md  SETUP.md  SLACK_SETUP.md  USE_CASES.md
docs/guides/: configuration.md  models.md  prerequisites.md  running-the-pipeline.md  scheduled-runs.md  services.md  slack.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json
sandbox/: example.py
scripts/: check_runtime_presence.py  mutate_fixture_repo.py  push_and_pr.py  run_monorepo_task.py  stress_scheduler_fixture_repo.py  test_file_edit.py  test_graph.py  test_ollama.py  validate_run_logs.py
src/: config.py  config_loader.py
tests/: __init__.py  conftest.py  test_branch_manager.py  test_change_planner.py  test_coder_prompt_contract.py  test_config.py  test_context_budget.py  test_context_builder.py  test_context_builder_node.py  test_context_contract_serialization.py  test_dependency_analyzer.py  test_execution_coordinator.py  test_file_writer.py  test_graph_pipeline.py  test_multi_file_workflow.py  test_observability.py  test_patches.py  test_plan_dispatcher.py  test_repository_indexer.py  test_retrieval_contract.py  test_retrieval_engine.py  test_retrieval_integration.py  test_runtime_executor.py  test_runtime_models.py  test_runtime_queue.py  test_runtime_registry.py  test_runtime_scheduler.py  test_runtime_state.py  test_sandbox.py  test_state_factory.py  test_symbol_slicer.py  test_token_counter.py  test_verifier_sandbox.py
(+222 files in other folders)
