[project]
name = "locally-driven-langgraph-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "graphifyy>=0.8.22",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.14",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
]
