[project]
name = "locally-driven-langgraph-llm"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.136.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "langgraph>=1.2.1",
    "langfuse>=4.6.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
    "gitpython>=3.1.50",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "neo4j>=5.0",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]

tools = [
    "graphifyy>=0.8.22",
]
